--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "react-calendar": "^3.0.1",
     "react-dom": "^16.13.1",
     "react-image": "^2.4.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
