--- a/app/package.json
+++ b/app/package.json
@@ -12,7 +12,8 @@
     "react-image": "^2.4.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
